# strawberry-image-upload-example

./: .gitignore  pyproject.toml
api/: schema.py  types.py
avatars/: admin.py  models.py  views.py
avatars/migrations/: 0001_initial.py  0002_remove_avatar_title.py
avatars/static/avatars/: avatars.js  upload.js
avatars/templates/avatars/: avatars.html
fileupload/: settings.py  urls.py
